# ppi-auto

./: AUTHORS  CMakeLists.txt  README  README.md  TODO  pee.cc
algoritmo/: grammar  interpret.cc  interpret.h  main.cc  parametros  pee.cc  pee.h  symbol
problem/: interpreter_core  interpreter_core-protected  interpreter_core-unprotected  pee_individual_print_function
problem/A701/: data.csv  symbol
problem/iris/: README.md  grammar.bnf
problem/polynomial/: data.csv  grammar.bnf
problem/random/: data.csv  grammar  grammar-full.bnf  grammar.bnf  symbol
problem/teste/: grammar  grammar_bnf  grammar_bnf1  interpreter_core  symbol
resource/: 2013-searching_for_novel_regression_functions.pdf.part  Accelerated parallel genetic programming tree evaluation with OpenCL-2012.pdf.part
script/: domination-many.py  feature_removal.py  feature_selection.py  islands-sample.txt  main.sh  pareto-merge.sh  pareto.py  plot.py  plot_figures.py  read_grammar.py  run.py  run_solution.sh  seeder.py  sensibility_test.py
scripts/: main.sh
src/: CMakeLists.txt  costmatrix  definitions  definitions.h  grammar  individual  main.cc  pee.cc  pee.h  pep.cc  pep.h  ppi.cc  ppi.h  ppp.cc  ppp.h  server.cc  server.h  symbol
src/client/: CMakeLists.txt  client.cc  client.h
src/common/: CMakeLists.txt  common.cc  common.h
src/interpreter/: CMakeLists.txt  accelerator.cc  accelerator.cl  accelerator.h  core  core.h  cpu.cc  cpu.h  functions.h  interpreter.h  interpreter_core  sequential.cc  sequential.h
src/server/: CMakeLists.txt  server.cc  server.h
src/util/: CMakeLists.txt  Exception.h  Random.cc  Random.h  Util.h
